added a tailwindcss plugin to help with the forms. updated the login page by adding a form to log in & another for registration. added some animation transitions to the forms. added Roboto font through css

--- a/src/styles/tailwindcss.css
+++ b/src/styles/tailwindcss.css
@@ -4,3 +4,10 @@
 /* purgecss end ignore */
 
 @tailwind  utilities;
+
+/* setting font  */
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900&display=swap');
+
+body {
+    font-family: 'Roboto', sans-serif;
+}
