--- a/src/styles/transitions.css
+++ b/src/styles/transitions.css
@@ -23,10 +23,10 @@
 .slide-enter-active {
   opacity: 1;
   margin-left: 0;
-  transition: opacity 200ms, margin 200ms;
+  transition: opacity 200ms, margin 200ms ease-in;
 }
 .slide-exit {
-  opacity: 0;
+  opacity: 0.8;
   margin-left: 0rem;
 }
 .slide-exit-active {
