added some custom plugins to tailwindcss config file

--- a/src/styles/input/tailwindcss.css
+++ b/src/styles/input/tailwindcss.css
@@ -17,3 +17,6 @@ body {
        @apply flex items-center justify-center;
     }
 }
+/* .gradient {
+    background: linear-gradient(to right, theme('colors.red.600'),theme('colors.green.600'))
+} */
